# migration-safety-check

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sample.txt
src/migration_safety_check/: __init__.py  __main__.py  cli.py  core.py  rules.py
tests/: test_migration_safety_check.py
